[package]
name = "t807"
version = "0.1.1"
edition = "2021"
authors = ["v1xingyue <qixingyue@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
sui-rust-operator = "0.1.8"
